# developer-tools

./: .dockerignore  .gitignore  NetFoundryRunners.postman_collection.json  README.md  active_directory_playbook.yml  bulkEditRoleAttributes.py  bulkInviteEndpoints.py  docker-compose-dnstest.yml  docker-compose-ziti-host-bridge.yml  docker-compose.yml  downloaded_network.yml  export-ziti-ca.bash  export-ziti-ca.zsh  optic.yml  ziti-daemonset-tun.yml  ziti-sidecar-proxy.yaml  ziti-sidecar-tproxy.yaml  ziti-sidecar.yaml  ziti-testclient.yaml
.github/workflows/: ansible-network-mgmt.yml
.optic/: .gitignore  ignore
.optic/api/: specification.json
Ansible/: ansible-playbook.yml
Docker/: .gitignore  Dockerfile  Dockerfile.demo  Dockerfile.example  Dockerfile.test  docker-compose-test.yml  docker-compose.yml  entrypoint-test.sh
ansible_collections/: ansible-playbook.yml  netfoundry_info-test.json
clients/bash/: Dockerfile  README.md  _client.sh  client.sh  client.sh.bash-completion
clients/c/: CMakeLists.txt  README.md
clients/c/api/: DefaultAPI.c  DefaultAPI.h
clients/c/model/: _core_v2_endpoints_enrollment_method.c  _core_v2_endpoints_enrollment_method.h  _core_v2_services__service_id__model.c  _core_v2_services__service_id__model.h  _core_v2_services__service_id__model_client_ingress.c  _core_v2_services__service_id__model_client_ingress.h  _core_v2_services__service_id__model_server_egress.c  _core_v2_services__service_id__model_server_egress.h  _core_v2_services_model.c  _core_v2_services_model.h  _core_v2_services_model_client_ingress.c  _core_v2_services_model_client_ingress.h  _core_v2_services_model_client_ingress_ports.c  _core_v2_services_model_client_ingress_ports.h  _core_v2_services_model_edge_router_hosts.c  _core_v2_services_model_edge_router_hosts.h  _core_v2_services_model_server_egress.c  _core_v2_services_model_server_egress.h  inline_object.c  inline_object.h  inline_object_1.c  inline_object_1.h  inline_object_2.c  inline_object_2.h  inline_object_3.c  inline_object_3.h  inline_object_4.c  inline_object_4.h  inline_object_5.c  inline_object_5.h  inline_object_6.c  inline_object_6.h  inline_response_200.c  inline_response_200.h  inline_response_200_1.c  inline_response_200_1.h  inline_response_200_10.c  inline_response_200_10.h  inline_response_200_11.c  inline_response_200_11.h  (+146 more)
clients/c/src/: apiClient.c
clients/c/unit-test/: test__core_v2_endpoints_enrollment_method.c  test__core_v2_services__service_id__model.c  test__core_v2_services__service_id__model_client_ingress.c  test__core_v2_services__service_id__model_server_egress.c  test__core_v2_services_model.c  test__core_v2_services_model_client_ingress.c  test__core_v2_services_model_client_ingress_ports.c  test__core_v2_services_model_edge_router_hosts.c  test__core_v2_services_model_server_egress.c  test_inline_object.c  test_inline_object_1.c  test_inline_object_2.c  test_inline_object_3.c  test_inline_object_4.c  test_inline_object_5.c  test_inline_object_6.c  test_inline_response_200.c  test_inline_response_200_1.c  test_inline_response_200_10.c  test_inline_response_200_11.c  test_inline_response_200_11__links.c  test_inline_response_200_12.c  test_inline_response_200_13.c  test_inline_response_200_14.c  test_inline_response_200_14_identity_providers.c  test_inline_response_200_14_updated_at.c  test_inline_response_200_15.c  test_inline_response_200_15__embedded.c  test_inline_response_200_15__embedded_network_config_metadata_list.c  test_inline_response_200_16.c  test_inline_response_200_17.c  test_inline_response_200_17__embedded.c  test_inline_response_200_17__embedded_organizations.c  test_inline_response_200_17__links.c  test_inline_response_200_18.c  test_inline_response_200_18__embedded.c  test_inline_response_200_19.c  test_inline_response_200_19_7_1_0.c  test_inline_response_200_19_7_3_16.c  test_inline_response_200_19_7_3_4.c  (+53 more)
clients/clojure/: project.clj
clients/csharp/: Org.OpenAPITools.sln  README.md
clients/dart/: README.md
clients/go/: README.md  api_default.go  client.go  configuration.go  model__core_v2_endpoints_enrollment_method.go  model__core_v2_services__service_id__model.go  model__core_v2_services__service_id__model_client_ingress.go  model__core_v2_services__service_id__model_server_egress.go  model__core_v2_services_model.go  model__core_v2_services_model_client_ingress.go  model__core_v2_services_model_client_ingress_ports.go  model__core_v2_services_model_edge_router_hosts.go  model__core_v2_services_model_server_egress.go  model_inline_object.go  model_inline_object_1.go  model_inline_object_2.go  model_inline_object_3.go  model_inline_object_4.go  model_inline_object_5.go  model_inline_object_6.go  model_inline_response_200.go  model_inline_response_200_1.go  model_inline_response_200_10.go  model_inline_response_200_11.go  model_inline_response_200_11__links.go  model_inline_response_200_12.go  model_inline_response_200_13.go  model_inline_response_200_14.go  model_inline_response_200_14_identity_providers.go  model_inline_response_200_14_updated_at.go  model_inline_response_200_15.go  model_inline_response_200_15__embedded.go  model_inline_response_200_15__embedded_network_config_metadata_list.go  model_inline_response_200_16.go  model_inline_response_200_17.go  model_inline_response_200_17__embedded.go  model_inline_response_200_17__embedded_organizations.go  model_inline_response_200_17__links.go  model_inline_response_200_18.go  model_inline_response_200_18__embedded.go  (+58 more)
clients/groovy/: .classpath  .project  README.md  build.gradle
clients/java/: .project  README.md  build.sbt  (+2 more)
docker/: Dockerfile.latest  Dockerfile.python-ansible  Dockerfile.python-latest  Dockerfile.python-test  docker-compose-test.yml  docker-compose.yml  my-netfoundry-network.py
docs/: index.html
platform-service-models/: AdvancedTunnelerToEndpoint.json  TunnelerToEdgeRouter.json  TunnelerToEndpoint.json  TunnelerToSdk.json  create-service-with-configs.json  create-transparent-service-with-standard-configs.json
v2/: bulkEditRoleAttributes.py  bulkInviteEndpoints.py
(+3848 files in other folders)
